--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
             - REDIS_REPLICATION_MODE=master
         networks:
             - hex-network
-            -
+
     rabbitmq:
         image: rabbitmq:3-management-alpine
         container_name: 'rabbitmq'
@@ -61,8 +61,8 @@ services:
             - "5672:5672"
             - "15672:15672"
         volumes:
-            - ./rabbitmq/data:/var/lib/rabbitmq/
-            - ./rabbitmq/log:/var/log/rabbitmq
+            - .rabbitmq/data:/var/lib/rabbitmq
+            - .rabbitmq/log:/var/log/rabbitmq
         networks:
             - hex-network
 networks:
