--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "php-amqplib/php-amqplib": "^3.1"
+        "php-amqplib/php-amqplib": "^3.1",
+      "ext-redis": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
