--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
         ports:
             - "6379:6379"
         volumes:
-            - .redis/redis-data:/var/lib/redis
-            - .redis/redis.conf:/usr/local/etc/redis/redis.conf
+            - ./redis/redis-data:/var/lib/redis
+            - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
         environment:
             - REDIS_REPLICATION_MODE=master
         networks:
@@ -61,8 +61,7 @@ services:
             - "5672:5672"
             - "15672:15672"
         volumes:
-            - .rabbitmq/data:/var/lib/rabbitmq
-            - .rabbitmq/log:/var/log/rabbitmq
+            - ./rabbitmq/data:/var/lib/rabbitmq
         networks:
             - hex-network
 networks:
